<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--Coordenadas-->
    <groupId>com.fermin</groupId>
    <artifactId>backendFermin</artifactId>
    <version>1.0.0</version>

    <!-- Metadatos-->
    <name>Backend del sistema de animalitos Fermin</name>
	<packaging>pom</packaging>
	<!-- Este proyecto noo genera un jar... simplemente es el pom... con la configuración... para que otros la puedan usar -->
	
    <modules>
        <module>animalitos-persistence</module>
        <module>animalitos-service-api</module>
        <module>animalitos-service-impl</module>
        <module>emails-service-api</module>
        <module>animalitos-rest-controller-v1</module>
        <module>aplicacion-backend</module>
    </modules>

    <!-- Configuraciones-->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Versiones -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <lombok.version>1.18.30</lombok.version>
        <spring-boot.version>2.5.6</spring-boot.version>
        <maven.jar.version>3.3.0</maven.jar.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<maven.compiler.version>3.11.0</maven.compiler.version>
    </properties>

    <!--Dependencias-->
    <dependencies>
		        <!-- Spring boot starter de data-jpa-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring-boot.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
		<dependency>
		    <groupId>org.mapstruct</groupId>
		    <artifactId>mapstruct</artifactId>
		    <version>${mapstruct.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.h2database/h2 
		Esta BBDD tiene integración diorecta con Spring. Si Spring necesita una BBDD y no he condfigurado ninguna y encuentra en el classpath H2
		Arranca esa BBDD, crear una BBDD dentro y se pone a trabajar contra ella. TODO DE GRATIS !
		GUAY SPRING !!!!!
		-->
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>2.2.224</version>
		    <scope>test</scope>
		</dependency>

    </dependencies>

    <build>
        <plugins>
            <!--plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </plugin-->
            <!-- Actualización del plugin de surefire: para que soporte test JUNIT-5, que son los que vienen por defecto en Spring -->
            <!-- Configuración especial de compilación -->

            <!-- Esto hace que los tests se empaqueten en otro JAR-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Poder usar mapstruct junto con lombok-->
			 <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <!-- Generación de informes JACOCO: Cobertura de código -->
    <!-- Integración con sonar -->

</project>